--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,9 @@ Type: Package
 Title: Simple Presentation of Estimated Exponential Semi-Variograms
 Version: 1.0.0
 Authors@R: c(person("Julia", "Dyck", role = c("aut", "cre"), email = "j.dyck@uni-bielefeld.de"),
-             person("Odile", "Sauzet", role = "aut") )
-Description: User friendly interface based on the R package 'geoR' to fit exponential parametric models to empirical semi-variograms in order to model the spatial correlation structure of health data. Geo-located health outcomes of survey participants may be used to model spatial effects on health in an ego-centred approach. 
+             person("Odile", "Sauzet", role = "aut"),
+             person("Jan-Ole", "Koslik", role = "aut"))
+Description: User friendly interface based on the R package 'gstat' to fit exponential parametric models to empirical semi-variograms in order to model the spatial correlation structure of health data. Geo-located health outcomes of survey participants may be used to model spatial effects on health in an ego-centred approach. 
   The package contains a range of functions to help explore the spatial structure of the data as well as visualize the fit of exponential models for various metaparameter combinations with respect to the number of lag intervals and maximal distance.
   Furthermore, the outcome of interest can be adjusted for covariates by fitting a linear regression in a preliminary step before the semi-variogram fitting process.
 License: MIT + file LICENSE
