Creating and documenting vario.mod2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(coords.plot)
 export(distance.info)
 export(par.uncertainty)
 export(vario.mod)
+export(vario.mod2)
 export(vario.reg.prep)
 importFrom(Rdpack,reprompt)
