--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(coords.plot)
 export(distance.info)
 export(par.uncertainty)
+export(par.uncertainty2)
 export(vario.mod)
 export(vario.reg.prep)
 importFrom(Rdpack,reprompt)
