--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    lme4
+    lme4,
+    testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
 RdMacros: 
@@ -45,3 +46,4 @@ RdMacros:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
